--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       border-radius: 5px;
       margin-top: 1rem;
       cursor: pointer;
+      border: none;
     }
     .button:hover {
       background-color: #ffa500;
@@ -386,7 +387,7 @@
       </li>
     </ul>
     <p><strong>Veterans, First Responders, and Students Discount:</strong> All mentioned receive an instant 10% off their entire bill.</p>
-    <a href="#bookingForm" class="button" id="bookingButton">CLICK HERE TO BOOK</a>
+    <button id="bookingButton" class="button">CLICK HERE TO BOOK</button>
     
     <!-- Booking Form -->
     <div id="bookingForm" class="booking-form">
