--- a/index.html
+++ b/index.html
@@ -459,10 +459,9 @@
   <footer>
     <p>&copy; 2025 ICONIC MOBILE DETAILS. All Rights Reserved.</p>
     <p>Follow us: 
-      <a href="https://facebook.com" target="_blank">Facebook</a> | 
       <a href="https://instagram.com" target="_blank">Instagram</a>
     </p>
-    <p>Contact: (000) 000-0000 | email@example.com</p>
+    <p>Contact: cvomero@iconicmobiledetails.com</p>
   </footer>
 </body>
 </html>
