--- a/index.html
+++ b/index.html
@@ -458,8 +458,7 @@
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 ICONIC MOBILE DETAILS. All Rights Reserved.</p>
-    <p>Follow us: 
-      <a href="https://instagram.com" target="_blank">Instagram</a>
+    <p>Hours of Operation: M-F 5-6pm, Weekends 7am-6pm</p>
     </p>
     <p>Contact: cvomero@iconicmobiledetails.com</p>
   </footer>
